--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=pro2_b
+
+# ~ = AltGr + 1 (nalevo)
+
+spring.datasource.url=jdbc:h2:~/mydb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
+
+
